src/test/ui/suggestions/issue-84973-negative.stderr
error[E0277]: the trait bound `i32: Tr` is not satisfied
  --> $DIR/issue-84973-negative.rs:10:9
   |
LL |     bar(a);
   |     --- ^ the trait `Tr` is not implemented for `i32`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `bar`
  --> $DIR/issue-84973-negative.rs:5:11
   |
LL | fn bar<T: Tr>(t: T) {}
   |           ^^ required by this bound in `bar`

error[E0277]: the trait bound `f32: Tr` is not satisfied
  --> $DIR/issue-84973-negative.rs:11:9
   |
LL |     bar(b);
   |     --- ^
   |     |   |
   |     |   expected an implementor of trait `Tr`
   |     |   help: consider borrowing here: `&b`
   |     required by a bound introduced by this call
   |
note: required by a bound in `bar`
  --> $DIR/issue-84973-negative.rs:5:11
   |
LL | fn bar<T: Tr>(t: T) {}
   |           ^^ required by this bound in `bar`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
